--- a/src/input.css
+++ b/src/input.css
@@ -10,6 +10,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 h1 {
@@ -30,7 +31,7 @@ nav {
 }
 #due {
     @apply rounded-full;
-    background: rgba(93, 255, 139, 0.3);
+    background: rgba(255, 231, 93, 0.3);
     backdrop-filter: blur(3px);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -42,7 +43,8 @@ nav {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 :disabled {
-    background: rgba(255, 255, 255, 0.15)
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: none;
 }
 
 .ishoverable {
@@ -92,6 +94,7 @@ nav {
     grid-template-rows: 1fr 7fr;
     grid-template-areas: "a" "b";
     height: 86vh;
+    max-height: 86vh;
 }
 #lesson-topbar {
     grid-area: a;
@@ -101,6 +104,9 @@ nav {
 }
     #score-count {
         grid-area: aa;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     #progress-bar {
         grid-area: ab;
@@ -112,5 +118,55 @@ nav {
 #lesson-body {
     grid-area: b;
 }
+    #multiple-choice-main {
+        height: 100%;
+        display: grid;
+        grid-template-rows: 1fr 4fr 3fr;
+        grid-template-areas: "ba" "bb" "bc";
+    }
+    #timer {
+        grid-area: ba;
+        width: fit-content;
+        height: fit-content;
+    }
+    #question {
+        grid-area: bb;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    #answers {
+        grid-area: bc;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        button {
+            width: 49%;
+            height: 46%;
+        }
+    }
+    #read-only-main {
+        height: 100%;
+        display: grid;
+        grid-template-rows: 4fr 2fr;
+        grid-template-areas: "ba" "bb";
+    }
+    #title {
+        grid-area: ba;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #text {
+        grid-area: bb;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
+.correct {background-color: rgba(93, 255, 139, 0.3);}
+.incorrect {background-color: rgba(255, 93, 93, 0.3);}
 /* ______ LAYOUT ITEMS ----------------------------------------------------*/
