--- a/src/input.css
+++ b/src/input.css
@@ -169,4 +169,9 @@ nav {
 
 .correct {background-color: rgba(93, 255, 139, 0.3);}
 .incorrect {background-color: rgba(255, 93, 93, 0.3);}
-/* ______ LAYOUT ITEMS ----------------------------------------------------*/
+
+/* GAME LAYOUT ITEMS ----------------------------------------------------*/
+#game-main {
+    width: 100%;
+    height: 80vh;
+}
